[FEATURE] add translations

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -1,2 +1,159 @@
 {
+  "activity.label.limit": "Limit",
+  "activity.label.published": "Published",
+  "activity.label.ticketEndedAt": "Ticket End Time",
+  "activity.label.ticketStartedAt": "Ticket Starting Time",
+  "activity.status.NotPublishedTicket": "Suspended.",
+  "activity.status.PublishedTicket": "Published.",
+  "activity.status.aboutToStart": "About to Start",
+  "activity.status.draft": "Draft",
+  "activity.status.expired": "Expired",
+  "activity.status.finished": "Finished",
+  "activity.status.holding": "Holding",
+  "activity.status.notPublished": "Not Published",
+  "activity.status.selling": "Selling",
+  "activity.status.soldOut": "Sold Out",
+  "activity.status.starting": "Starting",
+  "activity.term.description": "Description",
+  "activity.term.includingSessions": "Including Sessions",
+  "activity.term.location": "location",
+  "activity.term.sellingTime": "Selling Time",
+  "activity.term.session": "Session",
+  "activity.term.threshold": "Threshold",
+  "activity.term.ticketPlan": "Ticket Plan",
+  "activity.term.ticketPlanTitle": "Ticket Plan Title",
+  "activity.ui.addTicketPlan": "Add Ticket Plan",
+  "activity.ui.createSession": "Create Session",
+  "activity.ui.createTicketPlan": "Create Ticket Plan",
+  "activity.ui.downloadList": "Download",
+  "activity.ui.participantsList": "Participants",
+  "activity.ui.threshold": "At least",
+  "activity.warning.selectSession": "Select Session",
+  "appointment.label.allInstructors": "All Instructors",
+  "appointment.label.enrollments": "Enrollments",
+  "appointment.label.instructor": "Instructor",
+  "appointment.label.minutes": "Minutes",
+  "appointment.label.people": "people",
+  "appointment.label.perDay": "per day",
+  "appointment.label.perMonth": "per month",
+  "appointment.label.perWeek": "per week",
+  "appointment.label.perYear": "per year",
+  "appointment.label.price": "Price",
+  "appointment.label.seriesPeriod": "series",
+  "appointment.label.singlePeriod": "period",
+  "appointment.label.status": "Status",
+  "appointment.status.aboutToStart": "About to start",
+  "appointment.status.available": "Available",
+  "appointment.status.enrolled": "Enrolled",
+  "appointment.status.exlucded": "Closed",
+  "appointment.status.finished": "Finished",
+  "appointment.status.isPublished": "Published",
+  "appointment.status.notPublished": "Not Published",
+  "appointment.term.period": "Period",
+  "appointment.term.planTitle": "Plan Title",
+  "appointment.ui.addToCalendar": "Add to Calendar",
+  "appointment.ui.close": "Close",
+  "appointment.ui.editPeriod": "Edit Period",
+  "appointment.ui.emptyAppointment": "No appointment on schedule",
+  "appointment.ui.joinMeeting": "Join Meeting",
+  "appointment.ui.open": "Open",
+  "appointment.ui.single": "Single",
+  "appointment.warning.repetitiveMeta": "※ repeat period ",
+  "appointmnet.ui.appointmentText": "{name} made appointment with {title}",
+  "common.event.publishedSuccessfully": "Published Successfully",
+  "common.event.publishingFailed": "Publishing Failed",
+  "common.label.alreadyMember": "Already a member?",
+  "common.label.category": "Category",
+  "common.label.email": "Email",
+  "common.label.endedAt": "End Time",
+  "common.label.forgotPassord": "Forgot Password",
+  "common.label.goToLogin": "Login",
+  "common.label.listPrice": "List Price",
+  "common.label.loading": "Loading",
+  "common.label.notMember": "Not a member?",
+  "common.label.optional": "Optional",
+  "common.label.password": "Password",
+  "common.label.phone": "Phone",
+  "common.label.selectInstructor": "Select Instructor",
+  "common.label.sessionTitle": "Session Title",
+  "common.label.startedAt": "Starting Time",
+  "common.label.title": "Title",
+  "common.label.username": "Username or Email",
+  "common.menu.activities": "Activities",
+  "common.menu.activityAdmin": "Activity",
+  "common.menu.appointmentAdmin": "Appointment",
+  "common.menu.appointmentPlans": "Appointment Plans",
+  "common.menu.appointments": "Appointments",
+  "common.menu.categories": "Categories",
+  "common.menu.coupons": "Coupons",
+  "common.menu.creatorSettings": "Creator Settings",
+  "common.menu.members": "Members",
+  "common.menu.ownerSettings": "Owner Settings",
+  "common.menu.podcastAdmin": "Podcast",
+  "common.menu.podcastPlans": "Podcast Plans",
+  "common.menu.podcastPrograms": "Podcast Programs",
+  "common.menu.programAdmin": "Program",
+  "common.menu.programIssues": "Program Issues",
+  "common.menu.programProgress": "Learning Statistics",
+  "common.menu.programs": "Programs",
+  "common.menu.promotionAdmin": "Promotion",
+  "common.menu.salesAdmin": "Sales",
+  "common.menu.vouchers": "Vouchers",
+  "common.ui.cancel": "Cancel",
+  "common.ui.cancelPublishing": "Cancel Publishing",
+  "common.ui.comma": ", ",
+  "common.ui.confirm": "Confirm",
+  "common.ui.create": "Create",
+  "common.ui.delete": "Delete",
+  "common.ui.detail": "Detail",
+  "common.ui.edit": "Edit",
+  "common.ui.facebookLogin": "Facebook login/register",
+  "common.ui.goTo": "Go to tab",
+  "common.ui.googleLogin": "Google login/register",
+  "common.ui.login": "Login",
+  "common.ui.or": "or",
+  "common.ui.print": "Print",
+  "common.ui.publish": "Publish",
+  "common.ui.register": "Register",
+  "common.ui.registerNow": "Register",
+  "error.data.fetch": "Loading Failed",
+  "error.event.failedFacebookLogin": "login/register failed from Facebook",
+  "error.event.failedGoogleLogin": "login/register failed from Google",
+  "error.form.codes": "code must not be empty",
+  "error.form.couponPlanTitle": "plan title is required",
+  "error.form.email": "Email is required",
+  "error.form.emailFormat": "not a valid email",
+  "error.form.endedAt": "end time is required",
+  "error.form.location": "location is required",
+  "error.form.password": "password is required",
+  "error.form.startedAt": "starting time is required",
+  "error.form.ticketPlanTitle": "plan title is required",
+  "error.form.title": "title is required",
+  "error.form.username": "username or Email is required",
+  "error.route.notFound": "Route Not Found",
+  "membershipCard.label.selectMembershipCard": "Select Membership Card",
+  "promotion.label.availableDateRange": "Available Date",
+  "promotion.label.constraint": "Constraint",
+  "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
+  "promotion.label.create": "Create",
+  "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100Ｆ",
+  "promotion.label.forever": "forever",
+  "promotion.label.fromNow": "Now",
+  "promotion.label.price": "{amount} dollars",
+  "promotion.label.ratio": "{amount}%",
+  "promotion.label.unit": "張",
+  "promotion.label.withoutConstraintAmount": "直接折抵",
+  "promotion.term.amount": "amount",
+  "promotion.term.couponCode": "Coupon Code",
+  "promotion.term.couponCodes": "coupon",
+  "promotion.term.couponPlanTitle": "Coupont Plan Title",
+  "promotion.term.description": "Description and limit",
+  "promotion.term.discount": "Discount",
+  "promotion.term.dollar": "dollars",
+  "promotion.term.priceType": "amount",
+  "promotion.term.ratioType": "ratio",
+  "promotion.term.voucherCodes": "voucher",
+  "promotion.ui.custom": "Custom",
+  "promotion.ui.editCouponPlan": "Edit Coupon Plan",
+  "promotion.ui.random": "Random"
 }
