--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -59,26 +59,43 @@
   "appointment.ui.open": "Open",
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
-  "appointmnet.ui.appointmentText": "{name} made appointment with {title}",
+  "appointmnet.ui.appointmentText": "{name} made an appointment to {title}",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
+  "common.label.activityTicket": "Activity",
   "common.label.alreadyMember": "Already a member?",
+  "common.label.cannotRecover": "The action cannot be recovered.",
+  "common.label.card": "Membership Card",
   "common.label.category": "Category",
+  "common.label.day": "day",
   "common.label.email": "Email",
   "common.label.endedAt": "End Time",
   "common.label.forgotPassord": "Forgot Password",
   "common.label.goToLogin": "Login",
   "common.label.listPrice": "List Price",
   "common.label.loading": "Loading",
+  "common.label.memberPage": "My Page",
+  "common.label.merchandise": "Merchandise",
+  "common.label.month": "month",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
   "common.label.password": "Password",
+  "common.label.periodType": "Period Type",
   "common.label.phone": "Phone",
+  "common.label.program": "Program",
+  "common.label.programContent": "Program Content",
+  "common.label.programPlan": "Program Plan",
+  "common.label.salePrice": "Sale Price",
+  "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.selectInstructor": "Select Instructor",
+  "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
   "common.label.startedAt": "Starting Time",
   "common.label.title": "Title",
+  "common.label.unknowProduct": "Unknown Product",
   "common.label.username": "Username or Email",
+  "common.label.week": "week",
+  "common.label.year": "year",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.appointmentAdmin": "Appointment",
@@ -99,6 +116,8 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.vouchers": "Vouchers",
+  "common.term.instructor": "instructor",
+  "common.term.price": "price",
   "common.ui.cancel": "Cancel",
   "common.ui.cancelPublishing": "Cancel Publishing",
   "common.ui.comma": ", ",
@@ -111,49 +130,93 @@
   "common.ui.goTo": "Go to tab",
   "common.ui.googleLogin": "Google login/register",
   "common.ui.login": "Login",
+  "common.ui.loginAndRegister": "Login / Register",
+  "common.ui.logout": "Logout",
   "common.ui.or": "or",
   "common.ui.print": "Print",
   "common.ui.publish": "Publish",
   "common.ui.register": "Register",
   "common.ui.registerNow": "Register",
+  "common.ui.reply": "Reply",
+  "common.ui.reset": "Reset",
+  "common.ui.save": "Save",
+  "common.ui.search": "Search",
+  "creator.label.creatorAppointemnts": "Appointment",
+  "creator.label.creatorPodcast": "Podcats Program",
+  "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
   "error.event.failedFacebookLogin": "login/register failed from Facebook",
   "error.event.failedGoogleLogin": "login/register failed from Google",
+  "error.event.updateIssueFailed": "Update issue failed.",
   "error.form.codes": "code must not be empty",
-  "error.form.couponPlanTitle": "plan title is required",
-  "error.form.email": "Email is required",
   "error.form.emailFormat": "not a valid email",
-  "error.form.endedAt": "end time is required",
-  "error.form.location": "location is required",
-  "error.form.password": "password is required",
-  "error.form.startedAt": "starting time is required",
-  "error.form.ticketPlanTitle": "plan title is required",
-  "error.form.title": "title is required",
+  "error.form.isRequired": "{field} is required",
+  "error.form.issueContent": "content is required",
+  "error.form.memberSelect": "username or Email",
+  "error.form.selectInstructor": "username 或 Email",
   "error.form.username": "username or Email is required",
   "error.route.notFound": "Route Not Found",
+  "layout.label.creatorStudio": "Creator Studio",
+  "layout.label.ownerDashboard": "Owner Dashbaord",
+  "membershipCard.label.endedAt": "end at {date}",
+  "membershipCard.label.noLimit": "forever",
   "membershipCard.label.selectMembershipCard": "Select Membership Card",
+  "notification.term.notification": "Notification",
+  "notification.ui.checkNotifications": "read more",
+  "notification.ui.markAllAsRead": "Mark all as read",
+  "podcast.label.plan": "Plan",
+  "podcast.label.salesCount": "Sales Count",
+  "podcast.label.status": "Status",
+  "podcast.status.notPublished": "Not Published",
+  "podcast.status.planNotPublished": "停售，方案暫停對外銷售，並從廣播頁中隱藏",
+  "podcast.status.planPublished": "發佈，立刻開賣訂閱方案",
+  "podcast.status.published": "Published",
+  "podcast.term.podcastPlan": "Podcast Plan",
+  "podcast.ui.createPodcastProgram": "Create",
+  "price.label.firstPeriod": "First Period",
+  "price.label.free": "Free",
+  "price.label.originalPrice": "Original Price",
+  "price.label.perPeriods": "{amount} per {unit}",
+  "price.label.second": "After",
+  "program.event.editIssueFailed": "Edit issue failed",
+  "program.label.deleteIssuePrompt": "The commets of the issue will be deleted.",
+  "program.label.markIssueAs": "Mark as {status}",
+  "program.status.issueOpen": "solving",
+  "program.status.issueSolved": "solved",
+  "program.ui.addToCart": "Add to cart",
+  "program.ui.buyNow": "Buy Now",
+  "program.ui.checkProgramContent": "Check program content",
+  "program.ui.goToCart": "Go to cart",
+  "program.ui.joinNow": "Join now",
+  "program.ui.soldOut": "Sold out",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
   "promotion.label.create": "Create",
-  "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100Ｆ",
+  "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
   "promotion.label.forever": "forever",
   "promotion.label.fromNow": "Now",
-  "promotion.label.price": "{amount} dollars",
+  "promotion.label.price": "{amount}",
   "promotion.label.ratio": "{amount}%",
   "promotion.label.unit": "張",
   "promotion.label.withoutConstraintAmount": "直接折抵",
   "promotion.term.amount": "amount",
   "promotion.term.couponCode": "Coupon Code",
-  "promotion.term.couponCodes": "coupon",
+  "promotion.term.couponCodes": "Coupon",
   "promotion.term.couponPlanTitle": "Coupont Plan Title",
   "promotion.term.description": "Description and limit",
   "promotion.term.discount": "Discount",
   "promotion.term.dollar": "dollars",
   "promotion.term.priceType": "amount",
   "promotion.term.ratioType": "ratio",
-  "promotion.term.voucherCodes": "voucher",
+  "promotion.term.voucherCodes": "Voucher",
   "promotion.ui.custom": "Custom",
   "promotion.ui.editCouponPlan": "Edit Coupon Plan",
-  "promotion.ui.random": "Random"
+  "promotion.ui.random": "Random",
+  "upload.event.failed": "Upload failed",
+  "upload.event.success": "Upload successfully",
+  "upload.event.uploading": "Uploading",
+  "upload.label.retry": "Retry",
+  "upload.label.uploadFile": "Upload File",
+  "voucher.label.selectProducts": "Select Products"
 }
