--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -60,40 +60,67 @@
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
   "appointmnet.ui.appointmentText": "{name} made an appointment to {title}",
+  "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
+  "common.event.successfullySaved": "Saved",
+  "common.event.successfullyUpdatePassword": "Password Updated",
+  "common.label.account": "Account",
   "common.label.activityTicket": "Activity",
   "common.label.alreadyMember": "Already a member?",
+  "common.label.avatar": "Avatar",
   "common.label.cannotRecover": "The action cannot be recovered.",
+  "common.label.caption": "Caption",
   "common.label.card": "Membership Card",
   "common.label.category": "Category",
+  "common.label.confirmPassword": "Confirm Password",
+  "common.label.creatorTitle": "Title",
+  "common.label.currentPassword": "Current Password",
   "common.label.day": "day",
+  "common.label.discountDownPrice": "Discount Down Price",
   "common.label.email": "Email",
   "common.label.endedAt": "End Time",
   "common.label.forgotPassord": "Forgot Password",
   "common.label.goToLogin": "Login",
+  "common.label.introduction": "Introduction",
   "common.label.listPrice": "List Price",
-  "common.label.loading": "Loading",
+  "common.label.memberName": "Name",
   "common.label.memberPage": "My Page",
   "common.label.merchandise": "Merchandise",
+  "common.label.meta": "Short Description",
   "common.label.month": "month",
+  "common.label.name": "Name",
+  "common.label.newPassword": "New Password",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
+  "common.label.orderLogDate": "Order Date",
+  "common.label.orderLogId": "Order ID",
+  "common.label.orderLogPrice": "Order Price",
+  "common.label.orderLogStatue": "Order Status",
+  "common.label.outdated": "Outdated",
   "common.label.password": "Password",
   "common.label.periodType": "Period Type",
   "common.label.phone": "Phone",
+  "common.label.profileAdminTitle": "Profile",
+  "common.label.profileBasic": "Basic",
   "common.label.program": "Program",
   "common.label.programContent": "Program Content",
   "common.label.programPlan": "Program Plan",
+  "common.label.roleAdmin": "Role",
   "common.label.salePrice": "Sale Price",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.selectInstructor": "Select Instructor",
   "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
+  "common.label.speciality": "Speciality",
   "common.label.startedAt": "Starting Time",
   "common.label.title": "Title",
+  "common.label.totalPrice": "Total",
+  "common.label.totalSales": "Total",
+  "common.label.unavailableSelling": "Unavailable Now",
   "common.label.unknowProduct": "Unknown Product",
   "common.label.username": "Username or Email",
+  "common.label.video": "Video",
   "common.label.week": "week",
   "common.label.year": "year",
   "common.menu.activities": "Activities",
@@ -116,18 +143,38 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.vouchers": "Vouchers",
+  "common.status.orderFailed": "Failed",
+  "common.status.orderRefund": "Refund",
+  "common.status.orderSuccess": "Success",
+  "common.status.orderUnpaid": "Unpaid",
   "common.term.instructor": "instructor",
   "common.term.price": "price",
+  "common.term.teachingAssistant": "Teaching Assistant",
+  "common.text.dueDate": "due at {date}",
+  "common.text.noAssignedInstructor": "No assigned instructor.",
+  "common.text.purchasedAt": "{name} purchased at {date}",
+  "common.text.shortDescriptionPlaceholder": "limit in 30 characters",
+  "common.text.totalActualSalse": "實際銷售總額 {dollars} 元",
+  "common.text.totalActualSalseNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
+  "common.text.totalCount": "{count} in total",
+  "common.ui.add": "Add",
+  "common.ui.addInstructor": "Add Instructor",
+  "common.ui.addToCart": "Add to Cart",
+  "common.ui.buyNow": "Buy",
   "common.ui.cancel": "Cancel",
+  "common.ui.cancelOrder": "Cancel Order",
   "common.ui.cancelPublishing": "Cancel Publishing",
+  "common.ui.checkInvoice": "Check Invoice",
   "common.ui.comma": ", ",
   "common.ui.confirm": "Confirm",
   "common.ui.create": "Create",
   "common.ui.delete": "Delete",
   "common.ui.detail": "Detail",
   "common.ui.edit": "Edit",
+  "common.ui.editPassword": "Edit Password",
   "common.ui.facebookLogin": "Facebook login/register",
-  "common.ui.goTo": "Go to tab",
+  "common.ui.goTo": "Go to Tab",
+  "common.ui.goToCart": "Go to Cart",
   "common.ui.googleLogin": "Google login/register",
   "common.ui.login": "Login",
   "common.ui.loginAndRegister": "Login / Register",
@@ -139,22 +186,30 @@
   "common.ui.registerNow": "Register",
   "common.ui.reply": "Reply",
   "common.ui.reset": "Reset",
+  "common.ui.retryPayment": "Retry Payment",
   "common.ui.save": "Save",
   "common.ui.search": "Search",
+  "common.ui.trial": "Trial",
   "creator.label.creatorAppointemnts": "Appointment",
   "creator.label.creatorPodcast": "Podcats Program",
   "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
+  "error.event.checkSamePassword": "Confirmed password is not match to new password",
   "error.event.failedFacebookLogin": "login/register failed from Facebook",
   "error.event.failedGoogleLogin": "login/register failed from Google",
   "error.event.updateIssueFailed": "Update issue failed.",
+  "error.form.account": "Username is required",
+  "error.form.accountNameOrEmail": "Username or email is required.",
   "error.form.codes": "code must not be empty",
+  "error.form.date": "select date",
   "error.form.emailFormat": "not a valid email",
+  "error.form.exchangeItems": "至少選一個兌換項目",
+  "error.form.exchangeItemsAmount": "amount of exchangable items is required",
   "error.form.isRequired": "{field} is required",
   "error.form.issueContent": "content is required",
   "error.form.memberSelect": "username or Email",
-  "error.form.selectInstructor": "username 或 Email",
-  "error.form.username": "username or Email is required",
+  "error.form.selectInstructor": "username or Email",
+  "error.form.voucherCodes": "Voucher codes is required",
   "error.route.notFound": "Route Not Found",
   "layout.label.creatorStudio": "Creator Studio",
   "layout.label.ownerDashboard": "Owner Dashbaord",
@@ -173,33 +228,102 @@
   "podcast.status.published": "Published",
   "podcast.term.podcastPlan": "Podcast Plan",
   "podcast.ui.createPodcastProgram": "Create",
+  "podcast.ui.subscribe": "Subscribe",
   "price.label.firstPeriod": "First Period",
   "price.label.free": "Free",
   "price.label.originalPrice": "Original Price",
   "price.label.perPeriods": "{amount} per {unit}",
   "price.label.second": "After",
+  "program.event.creatingBlock": "Creating Block",
   "program.event.editIssueFailed": "Edit issue failed",
+  "program.label.allProgram": "All Program",
+  "program.label.availableForPastContent": "可看過去內容",
+  "program.label.basicSettings": "Basic",
+  "program.label.contentContext": "Content",
+  "program.label.contentMenu": "Content Menu",
+  "program.label.contentPlan": "Content Plan",
+  "program.label.contentSorting": "Content Sorting",
+  "program.label.contentTitle": "Title",
+  "program.label.createProgram": "Create Program",
   "program.label.deleteIssuePrompt": "The commets of the issue will be deleted.",
+  "program.label.deleteProgram": "Delete Program",
+  "program.label.duration": "Duration (minutes)",
+  "program.label.introductionVideo": "Introduction Video",
   "program.label.markIssueAs": "Mark as {status}",
+  "program.label.permissiontype": "選擇內容觀看權限",
+  "program.label.perpetualPlanType": "Perpetual Plan",
+  "program.label.planDescription": "Plan Description",
+  "program.label.planTitle": "Plan Title",
+  "program.label.programAbstract": "Program Abstract",
+  "program.label.programContent": "Program Content",
+  "program.label.programCover": "Program cover",
+  "program.label.programDescription": "Program Description",
+  "program.label.programIntroduction": "Program Introduction",
+  "program.label.programOwner": "Program Owner",
+  "program.label.programPlanType": "Program Plan Type",
+  "program.label.programPublishingSettings": "Publish",
+  "program.label.programSalesPlan": "Sales Plan",
+  "program.label.programSettings": "Program Settings",
+  "program.label.programTitle": "Program Title",
+  "program.label.subscriptionPlan": "Subscription Plan",
+  "program.label.subscriptionPlanType": "Subscription Plan",
+  "program.label.unavailableForPastContent": "不可看過去內容",
+  "program.lable.subscriptionPeriodType": "Period Type",
+  "program.status.isPublished": "Published",
+  "program.status.isUnpublished": "Unpublished",
   "program.status.issueOpen": "solving",
   "program.status.issueSolved": "solved",
-  "program.ui.addToCart": "Add to cart",
-  "program.ui.buyNow": "Buy Now",
+  "program.status.notComplete": "Not Complete",
+  "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
+  "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
+  "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
+  "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
+  "program.text.enrolledCount": "Subscriber count: {count}",
+  "program.text.enrolledPerpetualCount": "Purchased count: {count}",
+  "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
+  "program.text.isUnpublishedNotation": "因你的課程未發佈，此課程並不會顯示在頁面上，學生也不能購買此課程。",
+  "program.text.memberWatchOnly": "{name} only",
+  "program.text.noPrice": "Missing price",
+  "program.text.noProgramAbstract": "Missing abstract",
+  "program.text.noProgramContent": "Missing content",
+  "program.text.noProgramDescription": "Missing description",
+  "program.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "program.text.programContentPlans": "Plan: ",
+  "program.text.salePriceNotation": "購買到優惠價的會員，往後每期皆以優惠價收款",
+  "program.text.unpublishingTitle": "Unpublish program?",
+  "program.text.unpublishingWarning": "課程將下架且不會出現在課程列表，已購買的學生仍然可以看到課程內容。",
+  "program.text.videoPlaceholder": "video url",
   "program.ui.checkProgramContent": "Check program content",
-  "program.ui.goToCart": "Go to cart",
+  "program.ui.createBlock": "Create Block",
+  "program.ui.createContent": "Add Content",
+  "program.ui.createPlan": "Create Plan",
+  "program.ui.deleteContent": "Delete Content",
+  "program.ui.deleteSection": "Delete Section",
   "program.ui.joinNow": "Join now",
+  "program.ui.jumpTo": "Go to Tab",
+  "program.ui.show": "Show",
   "program.ui.soldOut": "Sold out",
+  "program.ui.sortByDate": "Sort By Date",
+  "program.ui.sortBySection": "Sort By Section",
+  "program.ui.sortProgram": "Sort Program",
+  "program.ui.uploadCaption": "Upload Caption",
+  "program.ui.uploadVideo": "Upload Video",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
   "promotion.label.create": "Create",
   "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
+  "promotion.label.exchangeItems": "Exchangeable Items",
+  "promotion.label.exchangeItemsAmount": "Amount of Exchangeable Items",
   "promotion.label.forever": "forever",
   "promotion.label.fromNow": "Now",
   "promotion.label.price": "{amount}",
   "promotion.label.ratio": "{amount}%",
   "promotion.label.unit": "張",
   "promotion.label.withoutConstraintAmount": "直接折抵",
+  "promotion.status.available": "Available",
+  "promotion.status.unavailable": "Unavailable",
   "promotion.term.amount": "amount",
   "promotion.term.couponCode": "Coupon Code",
   "promotion.term.couponCodes": "Coupon",
@@ -209,10 +333,21 @@
   "promotion.term.dollar": "dollars",
   "promotion.term.priceType": "amount",
   "promotion.term.ratioType": "ratio",
+  "promotion.term.voucherCode": "Voucher Code",
   "promotion.term.voucherCodes": "Voucher",
+  "promotion.term.voucherPlanTitle": "Voucher Plan Title",
+  "promotion.text.enterVoucherCode": "vocher code",
+  "promotion.text.exchangeItemsNumber": "可兌換 {number} 個項目",
+  "promotion.text.exchangeNotation": "兌換券為一次使用後失效，請一次兌換完畢",
+  "promotion.text.exchangedCount": "{exchanged}/{total} 張",
+  "promotion.ui.addVoucher": "Add Voucher",
+  "promotion.ui.createVoucherPlan": "Create Voucher Plan",
   "promotion.ui.custom": "Custom",
   "promotion.ui.editCouponPlan": "Edit Coupon Plan",
+  "promotion.ui.editVoucherPlan": "Edit Voucher Plan",
+  "promotion.ui.exchange": "Exchange",
   "promotion.ui.random": "Random",
+  "promotion.ui.useNow": "Use",
   "upload.event.failed": "Upload failed",
   "upload.event.success": "Upload successfully",
   "upload.event.uploading": "Uploading",
